# SP23-BSCS-0084

./: .env.example  .gitignore  AI-log.md  LICENSE  ProblemStatement.md  README.md  ReleaseRoadmap.md  TestPlan.md  UI-Sketch-and-Vision.md  UseCases.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
api/: .env.example  README.md  index.py  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
api/app/routers/: __init__.py  admin.py  candidate.py  notifications.py  public.py  recruiter.py
api/app/services/: matching.py  storage.py
api/db/: schema.sql  seed.sql
src/: App.tsx  index.css
src/components/: ProtectedRoute.tsx
src/components/jobs/: JobCard.tsx  JobsList.tsx  PostJobDialog.tsx  RecruiterJobsList.tsx
src/components/profile/: ProfileEditor.tsx
src/components/ui/: button.tsx
src/hooks/: useAuth.tsx
src/integrations/supabase/: client.ts  types.ts
src/pages/: Auth.tsx  Index.tsx
src/pages/dashboard/: AdminDashboard.tsx  RecruiterDashboard.tsx  UserDashboard.tsx
supabase/: config.toml
supabase/migrations/: 20251202153545_9b093ed3-0342-4b16-8990-6987f7cfd58f.sql  20251203161055_3fbff799-c8c5-4819-be06-86c2513211df.sql
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: DashboardLayout.tsx
web/src/lib/: api.ts  supabaseClient.ts
web/src/pages/: Auth.tsx  Jobs.tsx  LandingPage.tsx  Misc.tsx  Placeholder.tsx
web/src/pages/admin/: AdminPages.tsx
(+2 files in other folders)
